# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
configuration/: base.yaml  production.yaml
migrations/: 20240131094712_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
