[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = { version = "0.4.19", features = ["serde"] }
secrecy = {version = "0.6.0", features = ["serde"] }
config = "0.11.0"
tracing = "0.1.26"
tracing-actix-web = "0.6.0"
tracing-log = "0.1.0"
tracing-subscriber = "0.2.16"
serde = { version = "1.0.196", features = ["derive"] }
serde-aux = "3"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.23"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
